--- a/src/app/features/chat/channel-members-dialog/channel-members-dialog.component.scss
+++ b/src/app/features/chat/channel-members-dialog/channel-members-dialog.component.scss
@@ -85,6 +85,7 @@
 
     .members__add-icon {
       content: url('../../../../../public/icons/add-person-hover.svg');
+      filter: none;
     }
   }
 
