--- a/src/app/features/chat/thread-panel/thread-panel.component.scss
+++ b/src/app/features/chat/thread-panel/thread-panel.component.scss
@@ -71,7 +71,7 @@
 
 .thread__divider-label {
   font-size: v.font-size('min');
-  color: v.color('lines');
+  color: v.color('text-gray');
   white-space: nowrap;
 }
 
