--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -100,6 +100,7 @@
 
     img[src*='close.svg'] {
       content: url('../../public/icons/close-hover.svg');
+      filter: none;
     }
   }
   
